Add Robin to timeline

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <p>As part of my work at Specto, I open source and write about Belay, a Kotlin library to help find bugs and
             avoid crashes.</p>
 
-        <h3>July, 2020 — <a href="https://kindspeech.org">Kind Speech</a></h3>
+        <h3>2020 — <a href="https://kindspeech.org">Kind Speech</a></h3>
         <p>
             <span class="marginnote">
                 <img src="images/kind-speech.png" alt="Kind Speech logo" style="width:133px"/>
@@ -97,6 +97,11 @@
                     href="https://news.ycombinator.com/item?id=14942355">reach the frontpage</a>. Someone calls me a
             hipster for getting a turntable. ☮️</p>
 
+        <h3>2016 — Robin</h3>
+        <p>I work on a side project with a couple of friends. We launch a safety monitoring app for Android with a grand
+            vision: to help seniors live at home and their caregivers feel at ease. We apply to the Expa Labs startup
+            incubator and reach the final interview stage. We don't make the cut. We eventually abandon the project.</p>
+
         <h3>April 26, 2016 — <a
                 href="https://www.linkedin.com/pulse/how-small-slack-feature-helps-reinforce-life360s-values-silverman/">How
             a Small Slack Feature Helps Reinforce Life360's Company Values</a></h3>
@@ -110,9 +115,9 @@
         </p>
 
         <h3>2015 — <a href="https://www.tylertownley.com/next">Next Fitness</a></h3>
-        <p>I work on a side project with a designer friend and launch a personal training app for Android. We have a
-            grand vision: making workout recommendations tailored to each individual based on the successes of similar
-            users. After iterating for a few months my motivation wanes and I slowly give up. Sorry Tyler. 😬</p>
+        <p>I work on a side project with a designer friend. We launch a personal training app for Android with a grand
+            vision: making workout recommendations tailored to each individual based on the successes of similar users.
+            After iterating for a few months my motivation wanes and I slowly give up. Sorry Tyler. 😬</p>
 
         <h3>November 8, 2012 — <a href="the-best-time-to-post-on-hacker-news.html">The Best Time to Post on Hacker
             News</a></h3>
