Add NASL Application of MoMaN to timeline

--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@
             <a href="https://news.ycombinator.com/item?id=4681095">reach the frontpage</a> for the very first time. Yay!
         </p>
 
+        <h3>March 10, 2011 — <a href="https://www.youtube.com/watch?v=t9Cu65q8bPM">NASL Application of MoMaN</a></h3>
+        <p>An organization I co-founded, Cyber Nation, sponsors StarCraft 2 players. The North American Star League is
+            selecting participants by asking players to submit a video where they answer a series of questions in order
+            to gauge fan interest in the players. I help record and produce MoMaN's video. It blows up, gathering 70k+
+            views, and he becomes part of the 50 players invited to participate.
+        </p>
+
     </section>
 </article>
 
